Part I - Week 2 Deques and Randomized Queues: implement most of Deque API